--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- navigation area -->
     <nav>
         
-        <a id="home" href="index.html">HOME</a>
-        <a id="meetus" href="meetus.html">MEET US</a>
-        <a id="gallery" href="gallery.html">GALLERY</a>
-        <a id="contact" href="contact.html">CONTACT</a>
+        <a id="home" href="#">HOME</a>
+        <a id="meetus" href="#">MEET US</a>
+        <a id="gallery" href="#">GALLERY</a>
+        <a id="contact" href="#">CONTACT</a>
         
     </nav>
 
